--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-ATLAS_URI = mongodb+srv://riri13:S0SHazlfn5DbVjng@tteok.4cimfhg.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI = "mongodb+srv://riri13:S0SHazlfn5DbVjng@tteok.4cimfhg.mongodb.net/?retryWrites=true&w=majority"
+PORT = 5000
